api-debug.log
   Compiling circleci-tui-rs v0.1.0 (/home/pedot/projects/circleci-tui-rs)
error[E0425]: cannot find type `FacetedSearchBar` in this scope
  --> src/ui/screens/pipeline_detail.rs:81:25
   |
81 |     pub faceted_search: FacetedSearchBar,
   |                         ^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use crate::ui::widgets::faceted_search::FacetedSearchBar;
   |

error[E0433]: failed to resolve: use of undeclared type `Facet`
   --> src/ui/screens/pipeline_detail.rs:126:13
    |
126 |             Facet::new(
    |             ^^^^^ use of undeclared type `Facet`
    |
help: consider importing this struct
    |
  1 + use crate::ui::widgets::faceted_search::Facet;
    |

error[E0433]: failed to resolve: use of undeclared type `Facet`
   --> src/ui/screens/pipeline_detail.rs:139:13
    |
139 |             Facet::new(
    |             ^^^^^ use of undeclared type `Facet`
    |
help: consider importing this struct
    |
  1 + use crate::ui::widgets::faceted_search::Facet;
    |

error[E0433]: failed to resolve: use of undeclared type `FacetedSearchBar`
   --> src/ui/screens/pipeline_detail.rs:153:30
    |
153 |         let faceted_search = FacetedSearchBar::new(facets);
    |                              ^^^^^^^^^^^^^^^^ use of undeclared type `FacetedSearchBar`
    |
help: consider importing this struct
    |
  1 + use crate::ui::widgets::faceted_search::FacetedSearchBar;
    |

warning: unused imports: `BG_INPUT`, `BLOCKED`, `FAILED_TEXT`, `PENDING`, and `SUCCESS`
 --> src/ui/screens/pipeline_detail.rs:8:48
  |
8 |     get_status_color, get_status_icon, ACCENT, BG_INPUT, BG_PANEL, BLOCKED, BORDER, BORDER_FOCUSED,
  |                                                ^^^^^^^^            ^^^^^^^
9 |     FAILED_TEXT, FG_BRIGHT, FG_DIM, FG_PRIMARY, PENDING, RUNNING, SUCCESS,
  |     ^^^^^^^^^^^                                 ^^^^^^^           ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `get_status_color`
 --> src/ui/widgets/status_badge.rs:4:24
  |
4 | pub use crate::theme::{get_status_color, get_status_icon};
  |                        ^^^^^^^^^^^^^^^^

error[E0609]: no field `filter_success` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:846:18
    |
846 |             self.filter_success,
    |                  ^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `filter_running` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:847:18
    |
847 |             self.filter_running,
    |                  ^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `filter_failed` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:848:18
    |
848 |             self.filter_failed,
    |                  ^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `filter_pending` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:849:18
    |
849 |             self.filter_pending,
    |                  ^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `filter_blocked` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:850:18
    |
850 |             self.filter_blocked,
    |                  ^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `duration_filter` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:862:37
    |
862 |         let duration_info = if self.duration_filter == "All durations" {
    |                                     ^^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `duration_filter` on type `&PipelineDetailScreen`
   --> src/ui/screens/pipeline_detail.rs:865:34
    |
865 |             format!(", {}", self.duration_filter)
    |                                  ^^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

error[E0609]: no field `duration_dropdown_open` on type `&PipelineDetailScreen`
    --> src/ui/screens/pipeline_detail.rs:1116:28
     |
1116 |             } else if self.duration_dropdown_open {
     |                            ^^^^^^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `pipeline`, `workflows`, `jobs`, `selected_workflow_index`, `selected_job_index` ... and 14 others

Some errors have detailed explanations: E0425, E0433, E0609.
For more information about an error, try `rustc --explain E0425`.
warning: `circleci-tui-rs` (bin "circleci-tui-rs") generated 2 warnings
error: could not compile `circleci-tui-rs` (bin "circleci-tui-rs") due to 12 previous errors; 2 warnings emitted
